Add more names in Reposense

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -9,17 +9,17 @@
     {
       "githubId": "GAOJIAXIN666",
       "displayName": "GAO J...IAXIN",
-      "authorNames": ["GAOJIAXIN666"]
+      "authorNames": ["GAOJIAXIN666", "GAO_JIAXIN", "GAOJIAXIN"]
     },
     {
       "githubId": "omegafishy",
       "displayName": "LING ...HI YU",
-      "authorNames": ["omegafishy"]
+      "authorNames": ["omegafishy", "Ling Zhi Yu"]
     },
     {
       "githubId": "jeffypie369",
       "displayName": "SIE X...ERSON",
-      "authorNames": ["jeffypie369"]
+      "authorNames": ["jeffypie369", "Jefferson Sie"]
     },
     {
       "githubId": "yuntongzhang",
